...
        android:tooltipText="@string/tooltip_bt_on_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/discOnOff"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="42dp"
        android:background="@color/green_400"
        android:text="@string/on_off_disc"
        android:tooltipText="@string/tooltip_disc_on_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOnOff" />

    <Button
        android:id="@+id/btnFindUnpairedDevices"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/green_400"
        android:text="@string/search"
        android:tooltipText="@string/tooltip_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvNewDevices" />

    <ListView
        android:id="@+id/lvNewDevices"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/btnFindUnpairedDevices"
...
