...
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:background="#ffffff">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemIconSize="45dp"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemRippleColor="@color/color_bar_ripple"
        android:background="@drawable/navigation_background"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />


    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation"
        tools:layout_editor_absoluteX="-42dp"
...
